<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/calculateYour"
        android:textColor="@color/brown"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/age"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:background="@color/ageTextBackgroundColor"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="#929292"
        android:text="@string/selectDate"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#844046"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youAre"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/tvAgeInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#844046"
        android:textSize="35sp" />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGreyTextColor"
        android:text="@string/minutesOld"
        android:visibility="invisible"
        android:textSize="18sp"/>


    <TextView
        android:id="@+id/tvAgeInDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#844046"
        android:textSize="35sp" />
    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daysOld"
        android:textColor="@color/lightGreyTextColor"
        android:textSize="18sp"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/tvAgeInMonths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#844046"
        android:textSize="35sp" />
    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGreyTextColor"
        android:text="@string/monthsOld"
        android:visibility="invisible"
        android:textSize="18sp"/>


    <TextView
        android:id="@+id/tvAgeInYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#844046"
        android:textSize="35sp" />
    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGreyTextColor"
        android:text="@string/yearsOld"
        android:visibility="invisible"
        android:textSize="18sp"/>

</LinearLayout>